# browser-use-plusplus

./: .gitignore  .gitmodules  .profiles  README.md  anthropic_llm_client.py  available_ports.json  browser.py  browser.txt  cli.py  demo.py  dom_str.txt  login_tool.py  navigation.py  navigation_compare.py  persisted.json  pyproject.toml  requirements.txt  run_tests.py  survey.html  test_debug_cookies.py  test_diff.py  test_full_page.py  test_logger.py  test_new_browser_infra.py  test_opik.py  test_persistent_elements.py  test_prompt.py  test_tools.py  todo.md  view_snapshot.py  view_trace.py
.bupp/sites/: test_non_existent.json
.bupp/snapshots/: aikido_settings_button.json
.snapshots/plans/: click_actions.json
browser_use_plusplus/: logger.py  model_api_prices.json
browser_use_plusplus/common/: browser_config_service.py  constants.py  http_handler.py  lock.py  utils.py
browser_use_plusplus/eval/: client.py
browser_use_plusplus/sites/: aikido.py  aikido_setup.py  aikido_single.py  base.py  cibc.py  honeypot.py  juice_shop.py  visit_wikipedia.py
browser_use_plusplus/src/: agent.py  agent_single_task.py  client.py  dom_diff.py  links.py  llm_provider.py  pages.py  proxy.py  state.py  tools.py  utils.py
bupp/: base.py  logger.py
bupp/sites/: aikido_setup.py  base.py  cibc.py  honeypot.py  juice_shop.py  visit_wikipedia.py
common/: browser_config_service.py  constants.py  dirs.py  http_handler.py  httplib.py  types.py  utils.py
experiments/: base.py
output/: available_ports.json
tests/: fixtures.py  test_browser_config_service.py  urls.txt
(+160 files in other folders)
